# rutyva

./: setup.cfg
rutyva/: __init__.py  base_model.py  from_dict_generator.py
tests/: test.ipynb  test_base_model.py  test_decorator.py  test_from_dict_generator.py  test_subclass_subst.py  test_validation.py
