[metadata]
# replace with your username:
name = rutyva
version = 0.0.1
author = Guilherme Fontebasso
description = A module make it easier to call the xuri-genalgo remote service 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guifonte/rutyva
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = rutyva
packages = find:
python_requires = >=3.9

[options.packages.find]
where = rutyva
